<resources>
    <string name="app_name">Portfolio App</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="email">alqamaqureshi156@gamil.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Alqama Qureshi.</string>
    <string name="skill">Junior Android Developer</string>
    <string name="download_resume">Download Resume</string>
    <string name="Contacinfo">Contact Info</string>
    <string name="name">Alqama Qureshi</string>
    <string name="get_to_know_more">Get To Know More</string>
    <string name="about">About Me</string>
    <string name="education">Education</string>
    <string name="txt_education">BS. Software Engineering</string>
    <string name="Profile">Profile</string>
    <string name="txt_profile">A motivated and qualified Android developer with a proven track record of tackling real-world projects and solving complex problems. Proficient in mobile app development. I am dedicated to creating exceptional user experiences through innovative solutions. Ideal for   fresh talent.\n</string>
    <string name="update">Update</string>
    <string name="explore_my">Explore My</string>
    <string name="experience">Experience</string>
    <string name="Jobtitle">Job Title</string>
    <string name="JobDescription">Job Description</string>
    <string name="TimeDuration">Time Duration</string>
    <string name="Skills">Skills</string>
    <string name="company">Company</string>
    <string name="jobType">Job Type</string>
    <string name="skills">Skills\n</string>
    <string name="java">Java</string>
    <string name="AndroidSDK">Android SDK</string>
    <string name="Firebase">Firebase</string>
    <string name="API">API Integration</string>
    <string name="AndroidStudio">Android Studio</string>
    <string name="Git">Git</string>
    <string name="MaterialUI">Material UI</string>
    <string name="Flutter">Flutter</string>
    <string name="Dart">Dart</string>
    <string name="intermediate">Intermediate</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="contact_me">Contact Me</string>
    <string name="linkedin">LinkedIn</string>
    <string name="logout">Logout</string>
    <string name="certifications">CERTIFICATIONS</string>
    <string name="CName">Name</string>
    <string name="IssueOrganization">Issuing Organization</string>
    <string name="IssueDateYear">Issue Date and Year</string>
    <string name="PName">Project Name</string>
    <string name="pdescription">Project Description</string>
    <string name="projects">PROJECTS</string>
    <!--    <drawable name="placeholder_image">placeholder</drawable>-->
<!--    <drawable name="error_image">Error</drawable>-->
</resources>
