<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/certificate_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/custom_bg2" />

        <EditText
            android:id="@+id/edt_cname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/CName" />

        <EditText
            android:id="@+id/edt_issueOrganization"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IssueOrganization" />

        <EditText
            android:id="@+id/edt_IssueDateYear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/IssueDateYear" />

        <EditText
            android:id="@+id/edt_skills"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Skills" />

    </LinearLayout>
</ScrollView>