<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Fragment.HomeFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/get_in_touch"
        android:textColor="@color/grey_black"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/contact_me"
        android:textColor="@color/grey_black"
        android:textSize="35sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_bg"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/email"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/email" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/email"
            android:fontFamily="@font/poppins_light"
            android:text="@string/email"
            android:textColor="@color/grey_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/linkedin"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_below="@id/email"
            android:layout_marginTop="20dp"
            android:src="@drawable/linkedin" />

        <TextView
            android:id="@+id/txt_linkedin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@id/linkedin"
            android:fontFamily="@font/poppins_light"
            android:text="@string/linkedin"
            android:textColor="@color/grey_black"
            android:textSize="18sp" />

    </RelativeLayout>


</LinearLayout>
