<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="40dp"
    tools:context=".Fragment.SkillFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/skills"
        android:textColor="@color/grey_black"
        android:textSize="35sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_bg"
            android:padding="20dp">

            <!--            pb1-->
            <ImageView
                android:id="@+id/checkbox1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="22dp"
                android:layout_toEndOf="@id/checkbox1"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/java"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress1"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill1"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            //pb2-->
            <ImageView
                android:id="@+id/checkbox2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox1"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox1"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@id/checkbox2"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/AndroidSDK"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress2"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill2"
                android:layout_marginTop="10dp"
                android:progress="25" />

            <!--            pb3-->
            <ImageView
                android:id="@+id/checkbox3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox2"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox2"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox3"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Firebase"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill3"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            pb4-->
            <ImageView
                android:id="@+id/checkbox4"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox3"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox3"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox4"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/API"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress4"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill4"
                android:layout_marginTop="10dp"
                android:progress="40" />

            <!--            pb5-->
            <ImageView
                android:id="@+id/checkbox5"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox4"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox4"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox5"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/AndroidStudio"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress5"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill5"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            pb6-->
            <ImageView
                android:id="@+id/checkbox6"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox5"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox5"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox6"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Git"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress6"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill6"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            pb7-->
            <ImageView
                android:id="@+id/checkbox7"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox6"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox6"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox7"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/MaterialUI"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress7"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill7"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            pb8-->
            <ImageView
                android:id="@+id/checkbox8"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox7"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox7"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox8"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Flutter"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress8"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill8"
                android:layout_marginTop="10dp"
                android:progress="50" />

            <!--            pb9-->
            <ImageView
                android:id="@+id/checkbox9"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_below="@id/checkbox8"
                android:layout_marginTop="40dp"
                android:src="@drawable/checkmark" />

            <TextView
                android:id="@+id/skill9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/checkbox8"
                android:layout_marginStart="5dp"
                android:layout_marginTop="42dp"
                android:layout_toEndOf="@+id/checkbox9"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/Dart"
                android:textColor="@color/grey_black"
                android:textSize="16sp" />

            <ProgressBar
                android:id="@+id/progress9"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/skill9"
                android:layout_marginTop="10dp"
                android:progress="25" />

        </RelativeLayout>
    </ScrollView>


</LinearLayout>